# pysilpo

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  README.md  pyproject.toml
.github/workflows/: publish-package.yml  python-publish.yml
docs/: requirements.txt
docs/source/: conf.py  debugging.rst  get_started.rst  index.rst  introduction.rst
pysilpo/: __init__.py  authorization.py  cache.py  cheque.py  client.py  client.pyi  enums.py  exceptions.py  models.py  product.py  utils.py
pysilpo/services/: authorization.py  cheque.py  product.py  store.py
pysilpo/utils/: cache.py  cursor.py  enums.py  exceptions.py  utils.py
tests/: test_utils.py
