[tool.poetry]
name = "pysilpo"
version = "0.1.0"
description = "UNOFFICIAL API client for Silpo (Ukrainian supermarket chain)"
authors = ["iYasha <33287747+iYasha@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
pydantic = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
